changing effective landing page

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,9 +30,9 @@ $(document).ready(function() {
             <div class="col-md-9 wpb-menu-container">
               <ul class="wpb-main-menu">
                 <li><a onClick="scroll(0,0)">Home</a></li>
-                <li><a onClick="scroll(0,742);">How to Play</a></li>
-                <li><a onClick="scroll(0,1411);">Charity</a></li>
-                <li><a onClick="scroll(0,2021);">About Us</a></li>
+                <li><a href="#how-to">How to Play</a></li>
+                <li><a href="#slogan-head">Charity</a></li>
+                <li><a gref="#about-team">About Us</a></li>
                 <span ng-show="showOptions">
                   <li><a href="#!/signup">Sign Up</a></li>
                   <li><a href="#!/signin">Sign In</a></li>
