landing page abstraction

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,9 +30,9 @@ $(document).ready(function() {
             <div class="col-md-9 wpb-menu-container">
               <ul class="wpb-main-menu">
                 <li><a onClick="scroll(0,0)">Home</a></li>
-                <li><a href="#how-to">How to Play</a></li>
-                <li><a href="#slogan-head">Charity</a></li>
-                <li><a gref="#about-team">About Us</a></li>
+                <li><a href="/how-to-play">How to Play</a></li>
+                <li><a href="/charity">Charity</a></li>
+                <li><a href="/about-us">About Us</a></li>
                 <span ng-show="showOptions">
                   <li><a href="#!/signup">Sign Up</a></li>
                   <li><a href="#!/signin">Sign In</a></li>
@@ -134,7 +134,6 @@ $(document).ready(function() {
 
     <div class="container" id="how-to-container">
       <div class="row" id="main-text">
-
         <!-- Teaser Slogan Start -->
         <div id="slogan-head">
           <div class="span6 wpb-slogan">
@@ -180,64 +179,6 @@ $(document).ready(function() {
 
     <div class="container" id="how-to-container">
       <div class="row" id="main-text">
-
-        <!-- Teaser Slogan Start -->
-        <div id="slogan-head">
-          <div class="span6 wpb-slogan">
-            <h2>Charity</h2>
-            <h4 id="give">"If you don't give back, no one will like you&trade;" - <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a></h4>
-          </div>
-        </div>
-      </div>
-      <div id="info-box">
-        <div id="landing-image">
-          <div id="landing-charity">
-            <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity" id="crowdriseStaticLink-fundraiser-121142" title="Fundraising Websites on Crowdrise">Fundraising Websites - Crowdrise</a>
-            <script type="text/javascript" src="https://www.crowdrise.com/widgets/donate/fundraiser/121142/?callback=userDonationCb"></script>
-          </div>
-        </div>
-        <div class="some-text">
-            We're quite sure you feel the same way, so we've integrated donation widgets (via <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a>), along with some not-so-subtle reminders throughout the game to give you the opportunity to donate. If you're signed in when you donate, we'll even upgrade your account and place a crown on your avatar's head (to remind other players how much better you are than them).</p>
-            <p>
-            All donations go to the Make-a-Wish Foundation and benefit children in need.
-            </p>
-            <a href="http://www.wish.org"><img src="img/make-a-wish-logo-white-large.png" id="wish"/></a>
-          </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Donation Info End -->
-
-<!-- About Us Start -->
-<section class="wpb-contact-us parallax-background-contact" id="team">
-   <div class="wpb-teaser parallax-background" id="about-team">
-    <div class="background-opacity"></div>
-
-    <div class="container" id="how-to-container">
-      <div class="row" id="main-text">
-
-        <!-- Teaser Slogan Start -->
-        <div id="slogan-head">
-          <div class="span6 wpb-slogan">
-            <h2>The Team</h2>
-          </div>
-        </div>
-      </div>
-      <div class="wpb-team-details" id="team-names">
-        <h3>Created with love and tenderness by:<br>
-          <a href="http://github.com/silversteez">Matt Silverstein,</a>
-          <a href="http://github.com/mrngoitall">Will Ngo,</a>
-          <a href="http://github.com/tylermcginnis33">Tyler McGinnis,</a> and
-          <a href="http://github.com/davegonzalez">David Gonzalez</a></h3>
-          <h3>XOXO</h3>
-      </div>
-      <img src="img/group-shot.jpg" alt="Team Member" id="team-photo">
-    </div>
-  </div>
-</section>
-<!-- About Us End -->
-
 <!-- Footer Start -->
 <section class="foot">
   <div><small class="legal">Legal stuff: This game is based on the <a href="http://cardsagainsthumanity.com">Cards Against Humanity</a> card game, which is CC licensed (BY-NC-SA). Cards for Humanity is not affiliated with Cards Against Humanity. In complying with the Creative Commons license of the Cards Against Humanity card game, all proceeds from donations go directly to charity, as managed by <a href="http://crowdrise.com">crowdrise</a>.</small></div>
